--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.knightlab.com/libs/juxtapose/latest/css/juxtapose.css">
-    <link rel="stylesheet" href="style.css?v=2">
+    <link rel="stylesheet" href="style.css?v=3">
 </head>
 
 <body>
@@ -92,41 +92,64 @@
         <div class="container">
             <h2 class="section-title">Video Editing Results</h2>
 
-            <!-- Example 1 -->
-            <div class="result-item">
-                <h3 class="result-title">
-                    <s>Original prompt</s> → <strong>Edited prompt</strong>
-                </h3>
-                <div class="juxtapose-container">
-                    <div class="juxtapose" data-startingposition="50%">
-                        <img src="placeholder-source.svg" data-label="Source" alt="Source Video">
-                        <img src="placeholder-edited.svg" data-label="PreciseFlow" alt="Edited Video">
+            <!-- Row 1 -->
+            <div class="results-row">
+                <div class="result-item">
+                    <p class="result-title"><s>dog</s> → <strong>cat</strong></p>
+                    <div class="juxtapose-container">
+                        <div class="juxtapose" data-startingposition="50%">
+                            <img src="placeholder-source.svg" data-label="Source" alt="Source">
+                            <img src="placeholder-edited.svg" data-label="PreciseFlow" alt="Edited">
+                        </div>
+                    </div>
+                </div>
+                <div class="result-item">
+                    <p class="result-title"><s>car</s> → <strong>truck</strong></p>
+                    <div class="juxtapose-container">
+                        <div class="juxtapose" data-startingposition="50%">
+                            <img src="placeholder-source.svg" data-label="Source" alt="Source">
+                            <img src="placeholder-edited.svg" data-label="PreciseFlow" alt="Edited">
+                        </div>
+                    </div>
+                </div>
+                <div class="result-item">
+                    <p class="result-title"><s>day</s> → <strong>night</strong></p>
+                    <div class="juxtapose-container">
+                        <div class="juxtapose" data-startingposition="50%">
+                            <img src="placeholder-source.svg" data-label="Source" alt="Source">
+                            <img src="placeholder-edited.svg" data-label="PreciseFlow" alt="Edited">
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Example 2 -->
-            <div class="result-item">
-                <h3 class="result-title">
-                    <s>Original prompt</s> → <strong>Edited prompt</strong>
-                </h3>
-                <div class="juxtapose-container">
-                    <div class="juxtapose" data-startingposition="50%">
-                        <img src="placeholder-source.svg" data-label="Source" alt="Source Video">
-                        <img src="placeholder-edited.svg" data-label="PreciseFlow" alt="Edited Video">
+            <!-- Row 2 -->
+            <div class="results-row">
+                <div class="result-item">
+                    <p class="result-title"><s>summer</s> → <strong>winter</strong></p>
+                    <div class="juxtapose-container">
+                        <div class="juxtapose" data-startingposition="50%">
+                            <img src="placeholder-source.svg" data-label="Source" alt="Source">
+                            <img src="placeholder-edited.svg" data-label="PreciseFlow" alt="Edited">
+                        </div>
                     </div>
                 </div>
-            </div>
-
-            <!-- Example 3 -->
-            <div class="result-item">
-                <h3 class="result-title">
-                    <s>Original prompt</s> → <strong>Edited prompt</strong>
-                </h3>
-                <div class="juxtapose-container">
-                    <div class="juxtapose" data-startingposition="50%">
-                        <img src="placeholder-source.svg" data-label="Source" alt="Source Video">
-                        <img src="placeholder-edited.svg" data-label="PreciseFlow" alt="Edited Video">
+                <div class="result-item">
+                    <p class="result-title"><s>man</s> → <strong>woman</strong></p>
+                    <div class="juxtapose-container">
+                        <div class="juxtapose" data-startingposition="50%">
+                            <img src="placeholder-source.svg" data-label="Source" alt="Source">
+                            <img src="placeholder-edited.svg" data-label="PreciseFlow" alt="Edited">
+                        </div>
+                    </div>
+                </div>
+                <div class="result-item">
+                    <p class="result-title"><s>real</s> → <strong>anime</strong></p>
+                    <div class="juxtapose-container">
+                        <div class="juxtapose" data-startingposition="50%">
+                            <img src="placeholder-source.svg" data-label="Source" alt="Source">
+                            <img src="placeholder-edited.svg" data-label="PreciseFlow" alt="Edited">
+                        </div>
                     </div>
                 </div>
             </div>
