--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.knightlab.com/libs/juxtapose/latest/css/juxtapose.css">
-    <link rel="stylesheet" href="style.css?v=5">
+    <link rel="stylesheet" href="style.css?v=6">
 </head>
 
 <body>
     <!-- Sticky Navigation -->
-    <nav class="navbar" id="navbar">
+    <nav class="navbar visible" id="navbar">
         <div class="nav-container">
             <a href="#" class="nav-logo">PreciseFlow</a>
             <div class="nav-links">
